...
                                                        </userDefinedRuntimeAttribute>
                                                        <userDefinedRuntimeAttribute type="boolean" keyPath="layer.maskToBounds" value="YES"/>
                                                    </userDefinedRuntimeAttributes>
                                                </imageView>
                                                <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="tOE-bB-X4E" userLabel="LikeButtom">
                                                    <rect key="frame" x="354" y="4" width="44" height="31"/>
                                                    <accessibility key="accessibilityConfiguration" identifier="LikeButton"/>
                                                    <constraints>
                                                        <constraint firstAttribute="height" constant="44" id="FGb-1F-VIS"/>
                                                        <constraint firstAttribute="width" constant="44" id="uyM-B2-Htv"/>
                                                    </constraints>
                                                    <color key="tintColor" name="YP Red"/>
                                                    <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
...
                                <rect key="frame" x="177" y="423" width="60" height="60"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="60" id="TIP-rf-h1p"/>
                                    <constraint firstAttribute="width" constant="60" id="xfu-Dm-7Vj"/>
                                </constraints>
                            </imageView>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="5ZE-7O-iL6" userLabel="Login">
                                <rect key="frame" x="16" y="724" width="382" height="48"/>
                                <color key="backgroundColor" name="YP White"/>
                                <accessibility key="accessibilityConfiguration" identifier="Authenticate"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="48" id="sek-KO-WiH"/>
                                </constraints>
                                <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                                <state key="normal" title="Войти">
                                    <color key="titleColor" name="YP Black"/>
...
                                <connections>
                                    <outlet property="delegate" destination="780-gX-dKy" id="mnS-8C-ip0"/>
                                </connections>
                            </scrollView>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="9SD-4Y-OKS" userLabel="returnButton">
                                <rect key="frame" x="0.0" y="46" width="44" height="44"/>
                                <accessibility key="accessibilityConfiguration" identifier="BackToImageListButton"/>
                                <constraints>
                                    <constraint firstAttribute="width" constant="44" id="PBC-DQ-c7t"/>
                                    <constraint firstAttribute="height" constant="44" id="v47-dU-UMl"/>
                                </constraints>
                                <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                                <state key="normal" image="Backward"/>
...
